# PriorExtractor

./: package-lock.json  package.json  pyproject.toml  run.py
app/: __init__.py  app.py  main.py  streamlit_app.py
app/templates/: index.html
app/utils/: azure_uploader.py  csv_exporter.py  pdf_processor.py  storage.py
attached_assets/: Pasted-const-codeRanges-Record-string-category-string-description-string-CPT-Code-Range-1743775310053.txt
client/src/components/: azure-dialog.tsx  file-metadata-form.tsx  file-uploader.tsx  results-section.tsx
client/src/lib/: azure-utils.ts  code-lookup.ts  csv-utils.ts  pdf-utils.ts
client/src/pages/: home.tsx
server/: code-lookup.ts  pdf-parse-wrapper.ts  pdf-utils.ts  routes.ts  storage.ts
server/types/: pdf-parse.d.ts
shared/: schema.ts
